
public class AlarmaMovimiento {
    void encender() {
        System.out.println("Alarma encendida...");
    }

    void apagar() {
        System.out.println("Alarma apagada...");
    }
}
