
public interface AlertaSensor {
    void detectar();
}
