
public class Aspersor {
    public void apagar() {
        System.out.println("Aspersor Apagado");
    }

    public void encender() {
        System.out.println("Aspersor Prendido");
    }
}
