
public interface Comando {
    public void ejecutar();
}
