
public interface FabricaSensor {

    SensorMovimiento crearSensorMovimiento();

    SensorHumo crearSensorHumo();

}
