
public interface Mensaje {
    void enviarMensaje(String mensaje);
}
