
public class MensajeHumo {
    public void enviarMensaje(String mensaje) {
        System.out.println("Mensaje detector de humo. El mensaje es: " + mensaje);
        // Mensaje real
    }
}
