
public class MensajeMovimiento {
    public void enviarMensaje(String mensaje) {
        System.out.println("Mensaje detector de movimiento. El mensaje es: " + mensaje);
        // Mensaje real
    }
}
