
public interface SensorHumo {
    String obtenerDescripcion();
}
