
public interface SensorMovimiento {
    String obtenerDescripcion();
}
