@startuml

title __JAVA's Class Diagram__\n

  package  {
    class AlarmaMovimiento {
        + encender()
        + apagar()
    }
  }
  

  package  {
    interface Comando {
        {abstract} + ejecutar()
    }
  }
  

  package  {
    class FabricaPremium {
        + crearSensorMovimiento()
        + crearSensorHumo()
    }
  }
  

  package  {
    class FabricaNormal {
        + crearSensorMovimiento()
        + crearSensorHumo()
    }
  }
  

  package  {
    class ControlSeguridad {
        + setComando()
        + botonPresionado()
    }
  }
  

  package  {
    class Main {
        {static} + main()
    }
  }
  

  package  {
    class MensajeMovimiento {
        + enviarMensaje()
    }
  }
  

  package  {
    class AdaptadorMensajeMovimiento {
        + AdaptadorMensajeMovimiento()
        + enviarMensaje()
    }
  }
  

  package  {
    interface FabricaSensor {
        {abstract} + crearSensorMovimiento()
        {abstract} + crearSensorHumo()
    }
  }
  

  package  {
    interface SensorMovimiento {
        {abstract} + obtenerDescripcion()
    }
  }
  

  package  {
    interface SensorHumo {
        {abstract} + obtenerDescripcion()
    }
  }
  

  package  {
    interface AlertaSensor {
        {abstract} + detectar()
    }
  }
  

  package  {
    class SensorSistema {
        - listeners : Vector
        + registrar()
        + notificarUsuario()
    }
  }
  

  package  {
    class ObjetoUnico {
        {static} - instancia : ObjetoUnico
        - ObjetoUnico()
        {static} + obtenerInstancia()
        + mostrarMensaje()
    }
  }
  

  package  {
    class MensajeHumo {
        + enviarMensaje()
    }
  }
  

  package  {
    class AdaptadorMensajeHumo {
        + AdaptadorMensajeHumo()
        + enviarMensaje()
    }
  }
  

  package  {
    interface Mensaje {
        {abstract} + enviarMensaje()
    }
  }
  

  package  {
    class Aspersor {
        + encender()
        + apagar()
    }
  }
  

  package  {
    class EncenderAlarma {
        + EncenderAlarma()
        + ejecutar()
    }
  }
  

  package  {
    class ApagarAlarma {
        + ApagarAlarma()
        + ejecutar()
    }
  }
  

  package  {
    class ApagarAspersor {
        + ApagarAspersor()
        + ejecutar()
    }
  }
  

  package  {
    class EncenderAspersor {
        + EncenderAspersor()
        + ejecutar()
    }
  }
  

  package  {
    class SensorHumoPremium {
        {static} ~ DESCRIPCION : String
        + obtenerDescripcion()
        + detectar()
    }
  }
  

  package  {
    class SensorMovimientoPremium {
        {static} ~ DESCRIPCION : String
        + obtenerDescripcion()
        + detectar()
    }
  }
  

  package  {
    class SensorHumoComun {
        {static} ~ DESCRIPCION : String
        + obtenerDescripcion()
        + detectar()
    }
  }
  

  package  {
    class SensorMovimientoComun {
        {static} ~ DESCRIPCION : String
        + obtenerDescripcion()
        + detectar()
    }
  }
  

  FabricaPremium -up-|> FabricaSensor
  FabricaNormal -up-|> FabricaSensor
  ControlSeguridad o-- Comando : comando
  AdaptadorMensajeMovimiento -up-|> Mensaje
  AdaptadorMensajeMovimiento o-- MensajeMovimiento : adaptador
  AdaptadorMensajeHumo -up-|> Mensaje
  AdaptadorMensajeHumo o-- MensajeHumo : adaptador
  EncenderAlarma -up-|> Comando
  EncenderAlarma o-- AlarmaMovimiento : alarma
  ApagarAlarma -up-|> Comando
  ApagarAlarma o-- AlarmaMovimiento : alarma
  ApagarAspersor -up-|> Comando
  ApagarAspersor o-- Aspersor : aspersor
  EncenderAspersor -up-|> Comando
  EncenderAspersor o-- Aspersor : aspersor
  SensorMovimientoPremium -up-|> SensorMovimiento
  SensorMovimientoPremium -up-|> AlertaSensor
  SensorHumoPremium -up-|> SensorHumo
  SensorHumoPremium -up-|> AlertaSensor
  SensorMovimientoComun -up-|> SensorMovimiento
  SensorMovimientoComun -up-|> AlertaSensor
  SensorHumoComun -up-|> SensorHumo
  SensorHumoComun -up-|> AlertaSensor


right footer

PlantUML diagram generated by Emiliano Ruffini! 
endfooter

@enduml
